# lep

./: .gitignore  CMakeLists.txt  README  gui.conf  guiconf.txt  server.conf  speech.conf  text.conf
lib/lephmm/: mdef  means  mixture_weights  noisedict  sendump  transition_matrices  variances
lib/leplm/: action.dic.2  detect.dic  generate_text.py  genmodel.sh  lep.arpa  lep.dict  lep.idngram  lep.jsgf  lep.lm  lep.lm.DMP  lep.text  lep.txt  lep.vocab  lep.wc  search
src/: CMakeLists.txt  action.cpp  action.h  arduino.cpp  arduino.h  audio.cpp  audio.h  compile_config.h.in  config.cpp  config.h  ct_time.cpp  ct_time.h  device.cpp  device.h  gui.cpp  gui.h  lep.cpp  lepclient.cpp  lepclient.h  lepmodule.cpp  lepmodule.h  lepserver.cpp  lepserver.h  music.cpp  music.h  psintf.cpp  psintf.h  raspberry_pi.cpp  raspberry_pi.h  speak.cpp  speak.h  speech.cpp  speech.h  text.cpp  text.h  util.cpp  util.h
tests/: Makefile  Makefile.in  espintf_test.cpp  psintf_test.cpp  speech_test.cpp
